--- a/app/src/main/res/drawable/ic_bar_chart.xml
+++ b/app/src/main/res/drawable/ic_bar_chart.xml
@@ -17,11 +17,12 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <string name="app_name">preshoes</string>
-    <string name="title_home">홈</string>
-    <string name="title_diagnose">진단</string>
-    <string name="title_report">결과</string>
-    <string name="title_workout">운동</string>
-    <string name="title_settings">설정</string>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M5,9.2h3L8,19L5,19zM10.6,5h2.8v14h-2.8zM16.2,13L19,13v6h-2.8z"/>
+</vector>
