--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
   ~
@@ -17,11 +18,8 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <string name="app_name">preshoes</string>
-    <string name="title_home">홈</string>
-    <string name="title_diagnose">진단</string>
-    <string name="title_report">결과</string>
-    <string name="title_workout">운동</string>
-    <string name="title_settings">설정</string>
-</resources>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+</androidx.constraintlayout.widget.ConstraintLayout>
