--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#29B6F6</color>
+    <color name="colorPrimaryDark">#42A5F5</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
