--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/home_dest"
         android:name="org.wbpbp.preshoes.feature.home.HomeFragment"
-        android:label="Home"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home"/>
 
 </navigation>
