--- a/app/src/main/res/navigation/nav_graph_report.xml
+++ b/app/src/main/res/navigation/nav_graph_report.xml
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/report_dest"
         android:name="org.wbpbp.preshoes.feature.home.HomeFragment"
-        android:label="Report"
+        android:label="@string/title_report"
         tools:layout="@layout/fragment_report"/>
 
 </navigation>
