--- a/app/src/main/res/navigation/nav_graph_diagnose.xml
+++ b/app/src/main/res/navigation/nav_graph_diagnose.xml
@@ -18,16 +18,17 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_diagnose"
+    android:id="@+id/nav_graph_diagnose"
     app:startDestination="@id/diagnose_dest">
 
     <fragment
         android:id="@+id/diagnose_dest"
-        android:name="org.wbpbp.preshoes.feature.home.HomeFragment"
+        android:name="org.wbpbp.preshoes.feature.diagnose.DiagnoseFragment"
         android:label="@string/title_diagnose"
-        tools:layout="@layout/fragment_diagnose" />
+        tools:layout="@layout/diagnose_fragment" />
 
 </navigation>
