--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,6 @@
 
 <resources>
     <color name="colorPrimary">#29B6F6</color>
-    <color name="colorPrimaryDark">#42A5F5</color>
+    <color name="colorPrimaryDark">#3788CA</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
