--- a/app/src/main/res/layout/content_report_base.xml
+++ b/app/src/main/res/layout/content_report_base.xml
@@ -36,8 +36,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_report"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
