--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -18,10 +18,8 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -32,6 +30,32 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <org.wbpbp.preshoes.feature.home.FootPressureView
+            android:id="@+id/pressure_view_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:footTint="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.18"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:sensorTint="@color/colorPrimaryDark"
+            app:side="left" />
+
+        <org.wbpbp.preshoes.feature.home.FootPressureView
+            android:id="@+id/pressure_view_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:footTint="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.82"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:sensorTint="@color/colorPrimaryDark"
+            app:side="right" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
