--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -20,8 +20,8 @@
 
 <resources>
     <declare-styleable name="FootPressureView">
-        <attr name="footTint" format="reference|integer" />
-        <attr name="sensorTint" format="reference|integer" />
+        <attr name="footTint" format="reference|color" />
+        <attr name="sensorTint" format="reference|color" />
         <attr name="side" format="reference|string" />
     </declare-styleable>
 </resources>
