--- a/app/src/main/res/layout/diagnose_fragment.xml
+++ b/app/src/main/res/layout/diagnose_fragment.xml
@@ -32,15 +32,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{vm.text}"
+        <Button
+            style="@style/BigButton"
+            android:id="@+id/start_button"
+            android:text="@string/button_start_diagnose"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginBottom="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
