--- a/app/src/main/res/layout/content_report_base.xml
+++ b/app/src/main/res/layout/content_report_base.xml
@@ -45,4 +45,14 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_report"
         app:navGraph="@navigation/nav_graph_report" />
 
+    <!-- Toolbar shadow -->
+    <View
+        android:layout_width="0dp"
+        android:layout_height="8dp"
+        android:background="@drawable/ab_shadow"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_report"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/toolbar_shadow" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
