--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BigButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
